--- a/speaker-submission.html
+++ b/speaker-submission.html
@@ -2,14 +2,16 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8'/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speaker Submission</title>
     <link rel='stylesheet' href='styles.css'/>
   </head>
   <body>
     <header class='speaker-form-header'>
       <h1>Speaker Submission</h1>
-      <p><em>Want to speak at our conference? Fill out
-        this form.</em></p>
+      <p><em>
+        Want to speak at our conference? Fill out this form.
+      </em></p>
     </header>
     <form action='' method='get' class='speaker-form'>
         <div class='form-row'>
